--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.8'
 services:
+  client:
+    container_name: client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+      args: 
+      - REACT_APP_SERVER_URL=http://localhost:3000
+    ports:
+      - 80:80
   server:
     container_name: server
     build:
